--- a/index.html
+++ b/index.html
@@ -270,11 +270,11 @@ TODO CONTENT video cloudflare
   ></iframe>
   </div>
 
- <figure>
-   <h1>MASTER JUILLET</h1>
-   <p  class="vign"><a href="svg_profile/usual_signs.html" rel="external">PROJECT</a> (DCP)<br />ESSAI<br />CINEMATOGRAPHIQUE<br />4K DCI R3D <br /> FIN 2024/25<br /></p>
- </p>
- </figure>
+  <figure>
+    <h1>MASTER JUILLET</h1>
+    <p  class="vign"><a href="images/usual_signs.html" rel="external">PROJECT</a> (DCP)<br />ESSAI<br />CINEMATOGRAPHIQUE<br />4K DCI R3D <br /> FIN 2024/25<br /></p>
+  </p>
+  </figure>
 
     <article>
       <h2>WIP 2025</h2>
@@ -306,7 +306,7 @@ TODO CONTENT video cloudflare
 
  <figure>
    <h1>MASTER JUILLET</h1>
-   <p  class="vign"><a href="svg_profile/usual_signs.html" rel="external">PROJECT</a> (DCP)<br />ESSAI<br />CINEMATOGRAPHIQUE<br />4K DCI R3D <br /> FIN 2024/25<br /></p>
+   <p  class="vign"><a href="images/usual_signs.html" rel="external">PROJECT</a> (DCP)<br />ESSAI<br />CINEMATOGRAPHIQUE<br />4K DCI R3D <br /> FIN 2024/25<br /></p>
  </p>
  </figure>
 
@@ -341,7 +341,7 @@ TODO CONTENT video cloudflare
 
  <figure>
    <h1>MASTER JUILLET</h1>
-   <p  class="vign"><a href="svg_profile/usual_signs.html" rel="external">PROJECT</a> (DCP)<br />ESSAI<br />CINEMATOGRAPHIQUE<br />4K DCI R3D <br /> FIN 2024/25<br /></p>
+   <p  class="vign"><a href="images/usual_signs.html" rel="external">PROJECT</a> (DCP)<br />ESSAI<br />CINEMATOGRAPHIQUE<br />4K DCI R3D <br /> FIN 2024/25<br /></p>
  </p>
  </figure>
 
