--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@ TODO CONTENT video cloudflare
 
   <figure>
     <h1>MASTER JUILLET</h1>
-    <p  class="vign"><a href="images/usual_signs.html" rel="external">PROJECT</a> (DCP)<br />ESSAI<br />CINEMATOGRAPHIQUE<br />4K DCI R3D <br /> FIN 2024/25<br /></p>
+    <p  class="vign"><a href="svg_profile/index.html" rel="external">PROJECT</a> (DCP)<br />ESSAI<br />CINEMATOGRAPHIQUE<br />4K DCI R3D <br /> FIN 2024/25<br /></p>
   </p>
   </figure>
 
@@ -306,7 +306,7 @@ TODO CONTENT video cloudflare
 
  <figure>
    <h1>MASTER JUILLET</h1>
-   <p  class="vign"><a href="images/usual_signs.html" rel="external">PROJECT</a> (DCP)<br />ESSAI<br />CINEMATOGRAPHIQUE<br />4K DCI R3D <br /> FIN 2024/25<br /></p>
+   <p  class="vign"><a href="svg_profile/index.html" rel="external">PROJECT</a> (DCP)<br />ESSAI<br />CINEMATOGRAPHIQUE<br />4K DCI R3D <br /> FIN 2024/25<br /></p>
  </p>
  </figure>
 
@@ -341,7 +341,7 @@ TODO CONTENT video cloudflare
 
  <figure>
    <h1>MASTER JUILLET</h1>
-   <p  class="vign"><a href="images/usual_signs.html" rel="external">PROJECT</a> (DCP)<br />ESSAI<br />CINEMATOGRAPHIQUE<br />4K DCI R3D <br /> FIN 2024/25<br /></p>
+   <p  class="vign"><a href="svg_profile/index.html" rel="external">PROJECT</a> (DCP)<br />ESSAI<br />CINEMATOGRAPHIQUE<br />4K DCI R3D <br /> FIN 2024/25<br /></p>
  </p>
  </figure>
 
