--- a/index.html
+++ b/index.html
@@ -261,15 +261,32 @@ TODO CONTENT video cloudflare
 <aside class="page">
 
   <!--  TODO CONTENT video cloudflare-->
-<div  id="iftext">
+<div  id="iftext-A">
   <iframe
      src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/bb68bde1ef1c490f7b4b50e8f58706e0/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2Fbb68bde1ef1c490f7b4b50e8f58706e0%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
      style="border: none; position: absolute; top: 0; left: 0; height: 100%; width: 100%;"
      allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
      allowfullscreen="true"
    ></iframe>
-  </div>
-
+    </div>
+      <!--
+    <div  id="iftext-B">
+      <iframe
+         src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/bb68bde1ef1c490f7b4b50e8f58706e0/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2Fbb68bde1ef1c490f7b4b50e8f58706e0%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
+         style="border: none; position: absolute; top: 0; left: 0; height: 20%; width: 20%;"
+         allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
+         allowfullscreen="true"
+       ></iframe>
+    </div>
+    <div  id="iftext-C">
+          <iframe
+             src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/bb68bde1ef1c490f7b4b50e8f58706e0/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2Fbb68bde1ef1c490f7b4b50e8f58706e0%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
+             style="border: none; position: absolute; top: 0; left: 0; height: 20%; width: 20%;"
+             allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
+             allowfullscreen="true"
+           ></iframe>
+      </div>
+      -->
   <figure>
     <h1>MASTER JUILLET</h1>
     <p  class="vign"><a href="svg_profile/index.html" rel="external">PROJECT</a> (DCP)<br />ESSAI<br />CINEMATOGRAPHIQUE<br />4K DCI R3D <br /> FIN 2024/25<br /></p>
