--- a/index.html
+++ b/index.html
@@ -255,11 +255,10 @@ TODO CONTENT video cloudflare
       <h2>WIP 2025</h2>
     </article>
 -->
-    <div><img class="tempo" src="images/MJ-HLG-AB.jpg" alt="Sun"></div>
+    <div><img class="tempo" src="images/MJ-HLG-AB.jpg" alt="Sun" /></div>
   </aside>
 
 <aside class="page">
-
   <!--  TODO CONTENT video cloudflare-->
 <div  id="iftext-A">
   <iframe
@@ -269,16 +268,16 @@ TODO CONTENT video cloudflare
      allowfullscreen="true"
    ></iframe>
     </div>
-    
-  <figure>
-    <h1>MASTER JUILLET</h1>
-    <p  class="vign"><a href="svg_profile/index.html" rel="external">PROJECT</a> (DCP)<br />ESSAI<br />CINEMATOGRAPHIQUE<br />4K DCI R3D <br /> FIN 2024/25<br /></p>
-  </p>
-  </figure>
+    <figure>
+      <h1>MASTER JUILLET</h1>
+      <p  class="vign"><a href="svg_profile/index.html" rel="external">PROJECT</a> (DCP)<br />ESSAI<br />CINEMATOGRAPHIQUE<br />4K DCI R3D <br /> FIN 2024/25<br /></p>
+    </p>
+    </figure>
 
-    <article>
-      <h2>WIP 2025</h2>
-    </article>
+      <article>
+        <h2>WIP 2025</h2>
+      </article>
+
  </aside>
 </section>
 
@@ -289,14 +288,14 @@ TODO CONTENT video cloudflare
       <h2>WIP 2025</h2>
     </article>
 -->
-<div><img class="tempo" src="images/MJ-HLG-RD.jpg" alt="Sun"></div>
+<div><img class="tempo" src="images/MJ-HLG-RD.jpg" alt="Sun" /></div>
   </aside>
 
 <aside class="page">
 
   <!--  TODO CONTENT video cloudflare-->
 <div id="ifliter">
-  <iframe
+<iframe
     src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/403bb805c55eca15754e9c445321031f/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2F403bb805c55eca15754e9c445321031f%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
     style="border: none; position: absolute; top: 0; left: 0; height: 100%; width: 100%;"
     allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
@@ -324,12 +323,23 @@ TODO CONTENT video cloudflare
     </article>
 -->
 
-    <div><img class="tempo" src="images/MJ-HLG-NR.jpg" alt="Sun"></div>
+    <div><img class="tempo" src="images/MJ-HLG-NR.jpg" alt="Sun" /></div>
   </aside>
 
 <aside class="page">
+  <figure>
+    <h1>MASTER JUILLET</h1>
+    <p  class="vign"><a href="svg_profile/index.html" rel="external">PROJECT</a> (DCP)<br />ESSAI<br />CINEMATOGRAPHIQUE<br />4K DCI R3D <br /> FIN 2024/25<br /></p>
+  </p>
+  </figure>
 
- <!-- TODO CONTENT video cloudflare-->
+    <article>
+      <h2>WIP 2025</h2>
+    </article>
+  <!--  TODO CONTENT video cloudflare-->
+      <div style="position:absolute;left:30%;top:0;padding:3.3em 0 "><img style="width:70%" src="../images/ELEMENT-PROJECT-VERRE.jpg" alt="Sun" /></div>
+
+ <!-- TODO CONTENT video cloudflare
 <div id="ifvideo">
   <iframe
     src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/569c615c059af6e356fdfa2166a05f22/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2F569c615c059af6e356fdfa2166a05f22%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
@@ -338,16 +348,7 @@ TODO CONTENT video cloudflare
     allowfullscreen="true"
   ></iframe>
  </div>
-
- <figure>
-   <h1>MASTER JUILLET</h1>
-   <p  class="vign"><a href="svg_profile/index.html" rel="external">PROJECT</a> (DCP)<br />ESSAI<br />CINEMATOGRAPHIQUE<br />4K DCI R3D <br /> FIN 2024/25<br /></p>
- </p>
- </figure>
-
-    <article>
-        <h2>WIP 2025</h2>
-    </article>
+-->
  </aside>
 </section>
 
