--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@ TODO CONTENT video cloudflare
       <h2>WIP 2025</h2>
     </article>
   <!--  TODO CONTENT video cloudflare-->
-      <div style="position:absolute;left:30%;top:0;padding:3.3em 0 "><img style="width:70%" src="../images/ELEMENT-PROJECT-VERRE.jpg" alt="Sun" /></div>
+      <div style="position:absolute;left:30%;top:0;padding:3.3em 0 "><img style="width:70%" src="images/ELEMENT-PROJECT-VERRE.jpg" alt="Sun" /></div>
 
  <!-- TODO CONTENT video cloudflare
 <div id="ifvideo">
