--- a/index.html
+++ b/index.html
@@ -262,7 +262,8 @@ TODO CONTENT video cloudflare
   <figure>
     <h1>MASTER JUILLET</h1>
     <p  class="vign"><a href="svg_profile/index.html" rel="external">PROJECT</a> (DCP)<br />ESSAI<br />CINEMATOGRAPHIQUE<br />4K DCI R3D <br /> FIN 2024/25<br /></p>
-  </p>
+    <img class="vign" src="images/IMG_1913.jpg" alt="Sun" /></p>
+
   </figure>
 
     <article>
@@ -322,7 +323,7 @@ TODO CONTENT video cloudflare
   <figure>
     <h1>MASTER JUILLET</h1>
     <p  class="vign"><a href="svg_profile/index.html" rel="external">PROJECT</a> (DCP)<br />ESSAI<br />CINEMATOGRAPHIQUE<br />4K DCI R3D <br /> FIN 2024/25<br /></p>
-  </p>
+      <img class="vign" src="images/IMG_1913.jpg" alt="Sun" /></p>
   </figure>
 
     <article>
