--- a/index.html
+++ b/index.html
@@ -269,8 +269,9 @@ TODO CONTENT video cloudflare
     <article>
       <h2>WIP 2025</h2>
     </article>
-  <!--  TODO CONTENT video cloudflare-->
-  
+    <!--  TODO CONTENT video cloudflare-->
+        <div class="gen-img"><img src="images/DLG.jpg" alt="Sun" /></div>
+
  </aside>
 </section>
 
@@ -329,7 +330,8 @@ TODO CONTENT video cloudflare
     <article>
       <h2>WIP 2025</h2>
     </article>
-  <!--  TODO CONTENT video cloudflare-->
+    <!--  TODO CONTENT video cloudflare-->
+        <div class="gen-img"><img src="images/DLG.jpg" alt="Sun" /></div>
 
  </aside>
 </section>
