--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html  lang="fr_FR">
   <head>
 	<meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-	<meta name="apple-mobile-web-app-capable" content="yes">
-	<meta name="apple-mobile-web-app-status-bar-style" content="black">
-	<meta name="author" lang="fr" content="signer">
+	<meta name="apple-mobile-web-app-capable" content="yes" />
+	<meta name="apple-mobile-web-app-status-bar-style" content="black" />
+	<meta name="author" lang="fr" content="signer" />
 
 	<title>UXD, Visual, DCI , Writings, Filming, Say and Interaction Designer - /signer - Paris</title>
 
@@ -30,11 +30,11 @@
 	<meta name="keywords" content="UI/Visual Design, product design, graphic design, print design, ergonomics... design, user, interface, interaction, color, pattern, visual identity, graphic design, print design, web design, UXD, contemporary art, motion graphic design, typography, photography, literature, ergonomics, storybaord, guidelines, zoning, wireframe, mock-up, layout, prototype, rough... social networking, open source, FreeBSD, Mac OSX, WaSP, HTML5, W3C... ">
 	<link href="http://fonts.googleapis.com/css?family=PT+Sans:400,700,400italic|Roboto+Condensed:400,400italic,700|Titillium+Web:400,400italic,600,700' rel='stylesheet' type='text/css">
 
-	<link href="css/master_eponyme.css" media="all" rel="stylesheet" type="text/css">
-	<link href="css/typography.css" media="all" rel="stylesheet" type="text/css">
+	<link href="css/master_eponyme.css" media="all" rel="stylesheet" type="text/css" />
+	<link href="css/typography.css" media="all" rel="stylesheet" type="text/css" />
 
-	<!--  <link href="css/screen.css" media="screen" rel="stylesheet" type="text/css">-->
-  <!--  <link href="css/print.css" media="print" rel="stylesheet" type="text/css">-->
+	<!--  <link href="css/screen.css" media="screen" rel="stylesheet" type="text/css" />-->
+  <!--  <link href="css/print.css" media="print" rel="stylesheet" type="text/css" />-->
 
 	<script src="scripts/master_functions.js" type="text/javascript"></script>
   <script src="scripts/modernizr.custom.js" type="text/javascript"></script>
@@ -89,19 +89,19 @@
        allowfullscreen="true"
      ></iframe>
             -->
-            <h1>Vimeo 1</h1>
+            <h1>#1</h1>
 					</li>
 					<li>
-						<h1>Vimeo 2</h1>
+						<h1>#2</h1>
 					</li>
 					<li>
-						<h1>Vimeo 3</h1>
+						<h1>#3</h1>
 					</li>
 					<li>
-						<h1>Vimeo 4</h1>
+						<h1>#4</h1>
 					</li>
 					<li>
-						<h1>Vimeo 5</h1>
+						<h1>#5</h1>
 					</li>
 				</ul>
 			</article>
