--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 
 
       <figure><!--  TODO CONTENT<p class="vign">DIM</p>-->
-          <p class="inners">Projets en cours  :<a class="inners" href="https://f.io/qGbIwP1a" rel="external">f.io/qGbIwP1a</a></p>
+          <p class="inners">En cours <-> ARCHIVES  :<a class="inners" href="https://f.io/qGbIwP1a" rel="external">f.io/qGbIwP1a</a></p>
         </figure>
 		</header>
 
