--- a/index.html
+++ b/index.html
@@ -110,8 +110,6 @@
 
 <section class="head" id="rules">
 		<header role="banner">
-
-
 			<ul id="video" class="request">
 				<li><a id="vim" class="vim">
 					<svg version="1.1" xmlns:x="&ns_extend;" xmlns:i="&ns_ai;" xmlns:graph="&ns_graphs;"
@@ -128,18 +126,13 @@
 				<li><a id="vims" class="vims">Hide this content</a></li>
 			</ul>
 
-
-
 			<ul id="think" class="request">
 				<li><a id="tree" class="tree">Preparatory video</a></li>
 				<li><a id="trees" class="trees">Hide this content</a></li>
       </ul>
 
-
-
       <!--  TODO CONTENT SECOND NAV-->
       <nav role="navigation" id="nav">
-
         <ul class="tabs">
         <li id="1"><a href="#" id="txt"></a>
         <a href="#" id="texts"></a></li>
@@ -181,9 +174,7 @@
           <li id="deo"><a style="display:none" href="#s-video" id="vid" class="vid">Dire</a>
             <a href="#s-video" id="vids" class="vids">Dire</a></li>
         </ul>
-
       </nav>
-
 
       <figure><!--  TODO CONTENT<p class="vign">DIM</p>-->
           <p class="inners">ARCHIVES  :<a class="inners" href="https://f.io/qGbIwP1a" rel="external">f.io/qGbIwP1a</a></p>
@@ -201,17 +192,15 @@
 </section>
 
 <section id="switch-navigation">
-
   <figure>
     </figure>
 </section>
-
+<!--
 <section id="section">
   <section class="inner">
-
   </section>
 </section>
-
+-->
 <section id="s-sign">
 <aside class="page">  <!--  TODO CONTENT<p class="vign">DIM</p>-->
 
@@ -219,33 +208,7 @@
     <h2>WIP 2025</h2>
   </article>
 <div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
-      <!-- <div><img class="tempo" src="images/MJ-HLG-AB.jpg" alt="Sun"></div>
-      </aside>
-<aside class="page">
-
-TODO CONTENT video cloudflare
-<div id="ifsign">
-<iframe
-   src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/31020998d7e2daff9c091d18a88442d5/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2F31020998d7e2daff9c091d18a88442d5%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
-   style="border: none; position: absolute; top: 0; left: 0; height: 100%; width: 100%;"
-   allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
-   allowfullscreen="true"
- ></iframe>
- </div>
-
- <figure>
-   <h1>MASTER JUILLET</h1>
-   <p  class="vign">PROJECT (DCP)
-   <br />ESSAI<br />CINEMATOGRAPHIQUE<br />4K DCI R3D<br /> FIN 2024/25<br />
- </p>
- </figure>
-
-    <article>
-      <h2>WIP</h2>
-
-    </article>
-  -->
-     </aside>
+  </aside>
 </section>
 
 <section id="s-text" class="tab_content">
@@ -263,15 +226,12 @@ TODO CONTENT video cloudflare
     <h1>MASTER JUILLET</h1>
     <p  class="vign"><a href="svg_profile/index.html" rel="external">PROJECT</a> (DCP)<br />ESSAI<br />CINEMATOGRAPHIQUE<br />4K DCI R3D <br /> FIN 2024/25<br /></p>
     </p>
-
   </figure>
-
     <article>
       <h2>WIP 2025</h2>
     </article>
     <!--  TODO CONTENT video cloudflare-->
         <div class="gen-img"><img src="images/DLG.jpg" alt="Sun" /></div>
-
  </aside>
 </section>
 
@@ -302,7 +262,6 @@ TODO CONTENT video cloudflare
    <p  class="vign"><a href="svg_profile/index.html" rel="external">PROJECT</a> (DCP)<br />ESSAI<br />CINEMATOGRAPHIQUE<br />4K DCI R3D <br /> FIN 2024/25<br /></p>
  </p>
  </figure>
-
     <article>
        <h2>WIP 2025</h2>
     </article>
@@ -316,7 +275,6 @@ TODO CONTENT video cloudflare
       <h2>WIP 2025</h2>
     </article>
 -->
-
     <div><img class="tempo" src="images/MJ-HLG-NR.jpg" alt="Sun" /></div>
   </aside>
 
@@ -326,17 +284,15 @@ TODO CONTENT video cloudflare
     <p  class="vign"><a href="svg_profile/index.html" rel="external">PROJECT</a> (DCP)<br />ESSAI<br />CINEMATOGRAPHIQUE<br />4K DCI R3D <br /> FIN 2024/25<br /></p>
     </p>
   </figure>
-
     <article>
       <h2>WIP 2025</h2>
     </article>
     <!--  TODO CONTENT video cloudflare-->
         <div class="gen-img"><img src="images/DLG.jpg" alt="Sun" /></div>
-
  </aside>
 </section>
 
- <!-- <footer></footer> -->
+ <!-- <footer>PANTONE COLOR GRID USED & SIMPLE CONTACT & CC BY-NC-SA</footer> -->
 
 	<script src="scripts/jquery.mb.CSSAnimate.js" type="text/javascript"></script>
 	<script src="scripts/screenfull.js" type="text/javascript"></script>
