--- a/index.html
+++ b/index.html
@@ -89,19 +89,19 @@
        allowfullscreen="true"
      ></iframe>
             -->
-            <h1>#1</h1>
+            <h1>#1 - MASTER JUILLET PROLOGUE</h1>
 					</li>
 					<li>
-						<h1>#2</h1>
+						<h1>#2 - MASTER JUILLET EXT 1</h1>
 					</li>
 					<li>
-						<h1>#3</h1>
+						<h1>#3 - MASTER JUILLET EXT 2</h1>
 					</li>
 					<li>
-						<h1>#4</h1>
+						<h1>#4 - MASTER JUILLET EXT 3</h1>
 					</li>
 					<li>
-						<h1>#5</h1>
+						<h1>#5 - MASTER JUILLET EPILOGUE</h1>
 					</li>
 				</ul>
 			</article>
