--- a/index.html
+++ b/index.html
@@ -213,12 +213,12 @@
 
 <section id="s-text" class="tab_content">
   <aside class="page">  <!--  TODO CONTENT RESPONSIVE --><div><b></b></div>
-    <!--
+
     <article>
-      <h2>WIP 2025</h2>
+      <h2>R3D N&B 30%</h2>
     </article>
--->
-    <div><img class="tempo" src="images/MJ-HLG-AB.jpg" alt="Sun" /></div>
+
+    <div id="tempo" ><img class="tempo" src="images/MJ-HLG-NR.jpg" alt="Sun" /></div>
   </aside>
 
 <aside class="page">
@@ -236,13 +236,13 @@
 </section>
 
 <section id="s-liter"  class="tab_content">
-  <aside class="page"><!--  TODO CONTENT RESPONSIVE --><div><b></b></div>
-    <!--
+  <aside class="page">  <!--  TODO CONTENT RESPONSIVE --><div><b></b></div>
+
     <article>
-      <h2>WIP 2025</h2>
+      <h2>R3D N&B 30%</h2>
     </article>
--->
-<div><img class="tempo" src="images/MJ-HLG-RD.jpg" alt="Sun" /></div>
+
+    <div id="tempo" ><img class="tempo" src="images/MJ-HLG-NR.jpg" alt="Sun" /></div>
   </aside>
 
 <aside class="page">
@@ -269,13 +269,13 @@
 </section>
 
 <section id="s-video"  class="tab_content">
-  <aside class="page"><!--  TODO CONTENT RESPONSIVE --><div><b></b></div>
-    <!--
+  <aside class="page">  <!--  TODO CONTENT RESPONSIVE --><div><b></b></div>
+
     <article>
-      <h2>WIP 2025</h2>
+      <h2>R3D N&B 30%</h2>
     </article>
--->
-    <div><img class="tempo" src="images/MJ-HLG-NR.jpg" alt="Sun" /></div>
+
+    <div id="tempo" ><img class="tempo" src="images/MJ-HLG-NR.jpg" alt="Sun" /></div>
   </aside>
 
 <aside class="page">
