--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
              xml:space="preserve">
               <g>
                 <g>
-                  <polygon fill="#FFFFFF" points="11.095,7.206 4.326,0.272 0.095,4.504 11.089,15.502 22.095,4.486 17.864,0.255 		" />
+                  <polygon fill="#777" points="11.095,7.206 4.326,0.272 0.095,4.504 11.089,15.502 22.095,4.486 17.864,0.255 		" />
                 </g>
               </g>
             </svg>
@@ -162,7 +162,7 @@
                xml:space="preserve">
                 <g>
                   <g>
-                    <polygon fill="#FFFFFF" points="19.385,16.634 24,12.018 11.993,0 0,11.998 4.616,16.614 12,9.05 		" />
+                    <polygon fill="#777" points="19.385,16.634 24,12.018 11.993,0 0,11.998 4.616,16.614 12,9.05 		" />
                   </g>
                 </g>
               </svg>
