--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
       </nav>
 
       <figure><!--  TODO CONTENT<p class="vign">DIM</p>-->
-          <p class="inners">ARCHIVES  :<a class="inners" href="https://f.io/qGbIwP1a" rel="external">f.io/qGbIwP1a</a></p>
+          <p class="inners"><a href="https://f.io/qGbIwP1a" rel="external">ARCHIVES</a></p>
         </figure>
 		</header>
 
