--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         </ul>
       </nav>
 
-      <figure><!--  TODO CONTENT<p class="vign">DIM</p>-->
+      <figure><!--  TODO CONTENT PAGE ARCHIVE AND FRAME.IO-->
           <p class="inners"><a href="https://f.io/qGbIwP1a" rel="external">ARCHIVES</a></p>
         </figure>
 		</header>
@@ -184,7 +184,8 @@
 <section class="inner">
 			<aside id="press">
 				<article role="article" class="text">
-					<p><span>Écriture</span><br /> Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait que survivre cinq siècles, mais s'est aussi adapté à la bureautique informatique, sans que son contenu n'en soit modifié. </p>
+          <!--  TODO CONTENT DEV ACTIVE-->
+					<p><span class="active">Écriture</span><br /> Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait que survivre cinq siècles, mais s'est aussi adapté à la bureautique informatique, sans que son contenu n'en soit modifié. </p>
 					<p><span>Tournage</span><br /> Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait que survivre cinq siècles, mais s'est aussi adapté à la bureautique informatique, sans que son contenu n'en soit modifié. </p>
 					<p><span>Dire</span><br /> Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait que survivre cinq siècles, mais s'est aussi adapté à la bureautique informatique, sans que son contenu n'en soit modifié. </p>
 				</article>
@@ -197,7 +198,7 @@
 </section>
 
 <section id="s-sign">
-<aside class="page">  <!--  TODO CONTENT<p class="vign">DIM</p>-->
+<aside class="page">  <!--  TODO CONTENT-->
 
   <article>
     <h2>WIP 2025</h2>
@@ -207,7 +208,7 @@
 </section>
 
 <section id="s-text" class="tab_content">
-  <aside class="page">  <!--  TODO CONTENT RESPONSIVE --><div><b></b></div>
+  <aside class="page">  <!--  TODO CONTENT RESPONSIVE -->
 
     <article>
       <h2>001 R3D N&B 30%</h2>
@@ -230,7 +231,7 @@
 </section>
 
 <section id="s-liter"  class="tab_content">
-  <aside class="page">  <!--  TODO CONTENT RESPONSIVE --><div><b></b></div>
+  <aside class="page">  <!--  TODO CONTENT RESPONSIVE -->
 
     <article>
       <h2>002 R3D N&B 30%</h2>
@@ -263,7 +264,7 @@
 </section>
 
 <section id="s-video"  class="tab_content">
-  <aside class="page">  <!--  TODO CONTENT RESPONSIVE --><div><b></b></div>
+  <aside class="page">  <!--  TODO CONTENT RESPONSIVE -->
 
     <article>
       <h2>003 R3D N&B 30%</h2>
