--- a/index.html
+++ b/index.html
@@ -81,13 +81,13 @@
 			<article class="sp-content">
 				<ul class="sp-slider clearfix">
           <li>
-            <!--  TODO CONTENT video cloudflare, & VIMEO
+            <!--  TODO CONTENT video cloudflare...
             <iframe
-       src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/31020998d7e2daff9c091d18a88442d5/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2F31020998d7e2daff9c091d18a88442d5%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
-       style="border: none; position: absolute; top: 0; left: 0; height: 100%; width: 100%;"
-       allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
-       allowfullscreen="true"
-     ></iframe>
+         src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/7367cc581b663c025b7f99c37df9b9d4/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2F7367cc581b663c025b7f99c37df9b9d4%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
+         style="border: none; position: absolute; top: 0; left: 0; height: 100%; width: 100%;"
+         allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
+         allowfullscreen="true"
+       ></iframe>
             -->
             <h1>#1 - MASTER JUILLET PROLOGUE</h1>
 					</li>
@@ -245,7 +245,7 @@
   <!--  TODO CONTENT video cloudflare-->
 <div id="ifliter">
   <iframe
-     src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/31020998d7e2daff9c091d18a88442d5/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2F31020998d7e2daff9c091d18a88442d5%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
+     src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/7367cc581b663c025b7f99c37df9b9d4/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2F7367cc581b663c025b7f99c37df9b9d4%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
      style="border: none; position: absolute; top: 0; left: 0; height: 100%; width: 100%;"
      allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
      allowfullscreen="true"
