--- a/index.html
+++ b/index.html
@@ -240,26 +240,40 @@
     <div id="tempo" ><img class="tempo" src="images/MJ-HLG-NR.jpg" alt="Sun" /></div>
   </aside>
 
-<aside class="page">
-
+<aside class="page" id="ifliter">
+  <figure>
+    <h1>MASTER JUILLET</h1>
+    <p  class="vign"><a href="svg_profile/index.html" rel="external">PROJECT</a> (DCP)<br />ESSAI<br />CINEMATOGRAPHIQUE<br />4K DCI R3D <br /> FIN 2024/25<br /></p>
+  </p>
+  </figure>
+     <article>
+        <h2>WIP 2025</h2>
+     </article>
   <!--  TODO CONTENT video cloudflare-->
-<div id="ifliter">
+<div id="ifliter0">
   <iframe
      src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/7367cc581b663c025b7f99c37df9b9d4/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2F7367cc581b663c025b7f99c37df9b9d4%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
-     style="border: none; position: absolute; top: 0; left: 0; height: 100%; width: 100%;"
+     style="border: none;"
      allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
      allowfullscreen="true"
    ></iframe>
  </div>
-
- <figure>
-   <h1>MASTER JUILLET</h1>
-   <p  class="vign"><a href="svg_profile/index.html" rel="external">PROJECT</a> (DCP)<br />ESSAI<br />CINEMATOGRAPHIQUE<br />4K DCI R3D <br /> FIN 2024/25<br /></p>
- </p>
- </figure>
-    <article>
-       <h2>WIP 2025</h2>
-    </article>
+ <div id="ifliter1">
+ <iframe
+   src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/13cf66552716acc4176f3113872624bc/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2F13cf66552716acc4176f3113872624bc%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
+   style="border: none;"
+   allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
+   allowfullscreen="true"
+ ></iframe>
+  </div>
+  <div id="ifliter2">
+  <iframe
+  src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/d5a0edef53c06943e16de787bbc3dc9a/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2Fd5a0edef53c06943e16de787bbc3dc9a%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
+  style="border: none;"
+  allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
+  allowfullscreen="true"
+></iframe>
+   </div>
  </aside>
 </section>
 
